UserConnection module code refactored

--- a/src/config/packages/fos_rest.yaml
+++ b/src/config/packages/fos_rest.yaml
@@ -47,3 +47,4 @@ fos_rest:
       LaSalle\StudentTeacher\User\Domain\Exception\InvalidStateException: 400
       LaSalle\StudentTeacher\User\Domain\Exception\InvalidLetterContainingException: 400
       LaSalle\StudentTeacher\User\Domain\Exception\InvalidEmailException: 400
+      LaSalle\StudentTeacher\User\Domain\Exception\IncorrectStateException: 400
