--- a/src/config/packages/doctrine.yaml
+++ b/src/config/packages/doctrine.yaml
@@ -13,6 +13,7 @@ doctrine:
       state: LaSalle\StudentTeacher\User\Infrastructure\Persistence\Doctrine\Type\StateType
       status: LaSalle\StudentTeacher\Resource\Infrastructure\Persistence\Doctrine\Type\StatusType
       test_questions: LaSalle\StudentTeacher\Resource\Infrastructure\Persistence\Doctrine\Type\TestQuestionsType
+      test_student_assumptions: LaSalle\StudentTeacher\Resource\Infrastructure\Persistence\Doctrine\Type\TestStudentAssumptionsType
 
   orm:
     auto_generate_proxy_classes: true
