units endpoint modified

--- a/src/.env
+++ b/src/.env
@@ -16,7 +16,7 @@ APP_URL=http://localhost:8080/
 APP_FRONTEND=http://localhost:4200/
 
 ###> symfony/framework-bundle ###
-APP_ENV=test
+APP_ENV=dev
 APP_SECRET=e602191cd02cac5390c21adb572fb429
 #TRUSTED_PROXIES=127.0.0.0/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16
 #TRUSTED_HOSTS='^(localhost|example\.com)$'
