Changing clevyr/prestissimo to composer install in src's Makefile

--- a/src/Makefile
+++ b/src/Makefile
@@ -10,13 +10,11 @@ deps: composer-install
 composer-install: CMD=install
 composer-update: CMD=update
 composer composer-install composer-update:
-	@docker run --rm --interactive --user $(id -u):$(id -g) \
+	@docker run --rm --interactive \
+		--user $(id -u):$(id -g) \
 		--volume $(current-dir):/app \
 		--volume ${COMPOSER_HOME:-$HOME/.composer}:/tmp \
-		clevyr/prestissimo $(CMD) \
-			--ignore-platform-reqs \
-			--no-ansi \
-			--no-interaction
+		composer install
 
 reload:
 	@docker-compose exec php-fpm kill -USR2 1
