--- a/composer.json
+++ b/composer.json
@@ -8,42 +8,39 @@
         "ext-intl": "*",
         "ext-json": "*",
         "ext-openssl": "*",
-        "craftcamp/php-abac": "^3.0",
         "doctrine/doctrine-bundle": "*",
         "doctrine/doctrine-migrations-bundle": "*",
         "doctrine/orm": "*",
-        "friendsofsymfony/rest-bundle": "^2.7",
+        "friendsofsymfony/rest-bundle": "^3.0",
         "lambdish/phunctional": "^2.0",
         "lexik/jwt-authentication-bundle": "^2.6",
         "nelmio/cors-bundle": "^2.0",
         "ramsey/uuid": "^4.0",
         "sensio/framework-extra-bundle": "^5.5",
-        "symfony/console": "4.4.*",
-        "symfony/dotenv": "4.4.*",
-        "symfony/event-dispatcher": "4.4.*",
-        "symfony/finder": "4.4.*",
+        "symfony/console": "5.2",
+        "symfony/dotenv": "5.2",
+        "symfony/event-dispatcher": "5.2",
+        "symfony/finder": "5.2",
         "symfony/flex": "^1.11.0",
-        "symfony/framework-bundle": "4.4.*",
-        "symfony/mailer": "4.4.*",
-        "symfony/messenger": "4.4.*",
+        "symfony/framework-bundle": "5.2",
+        "symfony/mailer": "5.2",
+        "symfony/messenger": "5.2",
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
         "symfony/serializer-pack": "^1.0",
-        "symfony/twig-bridge": "4.4.*",
         "symfony/twig-pack": "^1.0",
-        "symfony/validator": "4.4.*",
-        "symfony/yaml": "4.4.*"
+        "symfony/validator": "5.2",
+        "symfony/yaml": "5.2"
     },
     "require-dev": {
         "behat/behat": "^3.7",
-        "behat/mink-browserkit-driver": "^1.3",
+        "friends-of-behat/mink-browserkit-driver": "^1.4",
         "dama/doctrine-test-bundle": "^6.3",
         "friends-of-behat/mink-extension": "^2.4",
         "friends-of-behat/symfony-extension": "2.1.0-BETA.1",
         "symfony/maker-bundle": "^1.15",
 	    "phpunit/phpunit": "^8.5",
-        "symfony/test-pack": "^1.0",
-        "symfony/web-server-bundle": "4.4.*"
+        "symfony/test-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
@@ -88,7 +85,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "4.4.*"
+            "require": "5.2"
         }
     }
 }
