--- a/composer.json
+++ b/composer.json
@@ -17,20 +17,20 @@
         "nelmio/cors-bundle": "^2.0",
         "ramsey/uuid": "^4.0",
         "sensio/framework-extra-bundle": "^5.5",
-        "symfony/console": "5.2",
-        "symfony/dotenv": "5.2",
-        "symfony/event-dispatcher": "5.2",
-        "symfony/finder": "5.2",
+        "symfony/console": "^5.2",
+        "symfony/dotenv": "^5.2",
+        "symfony/event-dispatcher": "^5.2",
+        "symfony/finder": "^5.2",
         "symfony/flex": "^1.11.0",
-        "symfony/framework-bundle": "5.2",
-        "symfony/mailer": "5.2",
-        "symfony/messenger": "5.2",
+        "symfony/framework-bundle": "^5.2",
+        "symfony/mailer": "^5.2",
+        "symfony/messenger": "^5.2",
         "symfony/monolog-bundle": "^3.5",
         "symfony/orm-pack": "^1.0",
         "symfony/serializer-pack": "^1.0",
         "symfony/twig-pack": "^1.0",
-        "symfony/validator": "5.2",
-        "symfony/yaml": "5.2"
+        "symfony/validator": "^5.2",
+        "symfony/yaml": "^5.2"
     },
     "require-dev": {
         "behat/behat": "^3.7",
@@ -86,7 +86,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.2"
+            "require": "^5.2"
         }
     }
 }
