--- a/config/packages/fos_rest.yaml
+++ b/config/packages/fos_rest.yaml
@@ -18,9 +18,9 @@ fos_rest:
     map_exception_codes: true
     codes:
       InvalidArgumentException: 400
-      LaSalle\StudentTeacher\Resource\Application\Exception\CategoryAlreadyExists: 400
-      LaSalle\StudentTeacher\Resource\Application\Exception\CategoryNotFound: 404
-      LaSalle\StudentTeacher\Resource\Application\Exception\CourseNotFoundException: 404
+      LaSalle\StudentTeacher\Resource\Category\Application\Exception\CategoryAlreadyExists: 400
+      LaSalle\StudentTeacher\Resource\Category\Application\Exception\CategoryNotFound: 404
+      LaSalle\StudentTeacher\Resource\Course\Application\Exception\CourseNotFoundException: 404
       LaSalle\StudentTeacher\Resource\Domain\Exception\UnitAlreadyExistsException: 400
       LaSalle\StudentTeacher\Resource\Domain\Exception\UnitNotFoundException: 400
       LaSalle\StudentTeacher\Shared\Application\Exception\PermissionDeniedException: 403
